--- a/css/style.css
+++ b/css/style.css
@@ -289,7 +289,125 @@ h4{
     color: black;
 }
 
-/*MEDIA QUERIES*/
+/*MEDIA QUERIES TABLET*/
+
+
+@media screen and (max-width: 1024px){
+
+
+.indexfooter{
+    display: none;
+}
+
+.portada{
+display: none;
+}
+
+.index {
+    background-image: url('../img/portada2.jpg');
+    background-size: cover; 
+    background-repeat:no-repeat;
+}
+body, html {
+    height: 40%;
+    margin: 0;
+}
+body::before {
+    content: 'TRAVEL';
+    position: absolute;
+    top: 0%;
+    left: 3%;
+    color: #070707; 
+    font-size: 40px; 
+}
+
+.nav{
+margin-left: 70%;
+}
+
+
+.texto1{
+    margin-bottom: 5%;
+    margin-left: 0%;
+    margin-right: 0%;
+    font-size: small;
+    text-align:center;
+}
+
+
+.destinos{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 140px 140px ;
+    margin-top: 1%;
+    margin-left: 5%;
+    margin-right: 5%;
+    grid-template-areas:
+    "texto1 texto1 texto1"
+    "texto1 texto1 texto1"
+    "texto1 texto1 texto1"
+    "img1 img2 img3"
+    " img4 img5 img6";
+}
+
+.tailandia{
+    text-align: center;
+    margin: 0%;
+    padding: 0%;
+    text-decoration:underline;
+    margin-top: 5%;
+}
+
+.card {
+    padding: 0%;
+    margin-left: 30%;
+    margin-bottom: 5%;
+}
+
+.galeriafooter{
+    margin-top: 25%;
+}
+.galeria-contenedor{
+    margin: 4%;
+    grid-gap: 5px;
+}
+
+.contacto{
+    margin-top: 10%;
+    margin-left: 2%;
+    margin-right: 2%;
+    text-align: center;
+}
+
+.iconos{
+    display:flex;
+    flex-wrap: wrap;
+    margin-left: 13%;
+    gap: 5%;
+    margin-top: 5%;
+    align-items: center;
+    text-align: center;
+}
+
+.icono-contacto-tarjeta{
+    margin-top: 4%;
+}
+.iconos p{
+    margin-right: 0%;
+}
+
+.linea{
+    background-color: rgb(61, 60, 60);
+    padding: 0.1px;
+    margin-left: 3%;
+    margin-right: 3%;
+    margin-top: 2%;
+    margin-bottom: 1%;
+}
+}
+
+
+/*MEDIA QUERIES MOBILE*/
 @media screen and (max-width: 480px){
 
     .portada{
@@ -384,7 +502,6 @@ margin-bottom: 5%;
 }
 
 .iconos{
-
     display:flex;
     flex-wrap: wrap;
     margin-left: 10%;
@@ -392,7 +509,6 @@ margin-bottom: 5%;
     margin-top: 5%;
     align-items: center;
     text-align: center;
-
 }
 
 .icono-contacto-tarjeta{
@@ -410,23 +526,5 @@ margin-bottom: 5%;
     margin-top: 2%;
     margin-bottom: 1%;
 }
-
-
-}
-
-
-
-@media screen and (max-width: 768px){
-    .portada-1{
-        display: none;
-    }
-    .portada-3{
-        display: none;
-    }
-    .nav {
-    display: inline-block;
-    font-size: small;
-    
-    }
 
 }
