--- a/css/estilo.css
+++ b/css/estilo.css
@@ -115,7 +115,8 @@ footer {
 .destinos img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .img1 {
@@ -163,7 +164,8 @@ footer {
 .galeria-contenedor .galeria-img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .galeria-item:nth-child(6) {
@@ -205,7 +207,8 @@ footer {
 .tarjetas .card .card-img {
   width: 40vh;
   height: 40vh;
-    object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   margin-top: 2%;
 }
 .tarjetas .card .card-content {
