--- a/css/pages/_oportunidades.scss
+++ b/css/pages/_oportunidades.scss
@@ -10,8 +10,7 @@
         border-radius: 5px;
         box-shadow: 0 7px 10px rgba(0, 0, 0, 0.1);
         font-size: small;
-        margin-left: 40px;
-        margin-top: 40px;
+        @include margin(40px, 40px);
         text-align: center;
 
         .card-img {
