--- a/css/partials/_reset.scss
+++ b/css/partials/_reset.scss
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: $fontfamily;
     text-decoration: none;
-    color: rgb(168, 168, 168);
+    color: $fontcolor;
 }
