--- a/css/partials/_variables.scss
+++ b/css/partials/_variables.scss
@@ -1,3 +1,5 @@
 $mainColor:  #7dece3 ;
 $fontcolor: rgb(168, 168, 168);
 $fontfamily: Verdana, Geneva, Tahoma, sans-serif;
+$second-font-family: Georgia, 'Times New Roman', Times, serif;
+
