--- a/css/pages/_contacto.scss
+++ b/css/pages/_contacto.scss
@@ -1,35 +1,34 @@
 .contacto{
-    margin-top: 10%;
-    margin-left: 30%;
-    margin-right: 30%;
+    margin-top: 5%;
+    margin-left: 25%;
+    margin-right: 25%;
     text-align: center;
-
-
+    color:gray;
+    font-family: $second-font-family;
     }
 
-.icono-contacto-tarjeta{
-    margin-top: 5%;
-}
 
 .linea{
-    background-color: black;
+    background-color: rgb(139, 146, 144);
     padding: 0.1px;
     margin-left: 30%;
     margin-right: 30%;
-    margin-top: 2%;
-    margin-bottom: 1%;
+    margin-top: 4%;
+    margin-bottom: 4%;
 }
 
-.iconos{
-    display:flex;
-    align-items: center;
-    margin-left: 30%;
-    gap: 6%;
+.bodycontacto{
+    background-color: whitesmoke;
+}
 
-    p{
-        color: grey;
-        font-size: small;
-        text-align:center;
-        margin-right: 30%;
-    }
+.boton{
+    border-radius: 10%;
+    margin-top: 5%;
+    align-items: center;
+    padding: 1%;
+    padding-left: 2%;
+    padding-right: 2%;
+    margin-left: 40%;
+    font-size: small;
+    border-color: grey;
 }
