--- a/css/partials/_reset.scss
+++ b/css/partials/_reset.scss
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: $fontfamily;
     text-decoration: none;
     color: $fontcolor;
+    background-color: whitesmoke;
 }
